; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dialog/extr_util.c_dlg_set_focus.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dialog/extr_util.c_dlg_set_focus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dlg_set_focus(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %23

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i64 @getpary(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @getcury(i32* %11)
  %13 = add nsw i64 %10, %12
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @getparx(i32* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @getcurx(i32* %16)
  %18 = add nsw i64 %15, %17
  %19 = call i32 @wmove(i32* %8, i64 %13, i64 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @wnoutrefresh(i32* %20)
  %22 = call i32 (...) @doupdate()
  br label %23

23:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @wmove(i32*, i64, i64) #1

declare dso_local i64 @getpary(i32*) #1

declare dso_local i64 @getcury(i32*) #1

declare dso_local i64 @getparx(i32*) #1

declare dso_local i64 @getcurx(i32*) #1

declare dso_local i32 @wnoutrefresh(i32*) #1

declare dso_local i32 @doupdate(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
